--- a/app/src/main/res/menu/manu.xml
+++ b/app/src/main/res/menu/manu.xml
@@ -5,6 +5,10 @@
         android:id="@+id/profile"
         android:title="Profile" />
     <item
+        android:id="@+id/findFriends"
+        android:title="Find Friends"
+    />
+    <item
         android:id="@+id/setting"
         android:title="Setting"
         />
@@ -12,5 +16,6 @@
         android:id="@+id/LogOut"
         android:title="LogOut"
         />
+
 
 </menu>
