--- a/app/src/main/res/drawable/in_bubble.xml
+++ b/app/src/main/res/drawable/in_bubble.xml
@@ -2,18 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="20dp">
         <rotate
-            android:fromDegrees="-30"
+            android:fromDegrees="-20"
             android:pivotX="100%"
             android:pivotY="100%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="#007AFF" />
+                <solid android:color="#D32D88" />
             </shape>
         </rotate>
     </item>
     <item android:right="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#007AFF" />
+            <solid android:color="#D32D88" />
             <corners android:radius="15dp" />
         </shape>
     </item>
