--- a/app/src/main/res/drawable/out_bubble.xml
+++ b/app/src/main/res/drawable/out_bubble.xml
@@ -7,13 +7,13 @@
             android:pivotY="100%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="#D1D1D6" />
+                <solid android:color="#FBC7B9" />
             </shape>
         </rotate>
     </item>
     <item android:left="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#D1D1D6" />
+            <solid android:color="#FBC7B9" />
             <corners android:radius="15dp" />
         </shape>
     </item>
