--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -20,7 +20,7 @@
             style="@style/Theme.AppCompat.NoActionBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#263571"
+            android:background="#D32D88"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             app:layout_scrollFlags="scroll|enterAlways"
             app:menu="@menu/manu"
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:elevation="12dp"
-            android:background="#263571"
+            android:background="#D32D88"
             app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/white"
             app:tabMaxWidth="0dp"
@@ -48,7 +48,7 @@
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"/>
+            android:background="#FBC7B9"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
