--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#3F51B5</item>
-        <item name="colorPrimaryVariant">#263571</item>
+        <item name="colorPrimaryVariant">#D32D88</item>
         <item name="colorOnPrimary">#352D2D</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#252727</item>
@@ -20,8 +20,8 @@
         <item name="android:colorActivatedHighlight">#D1FD7A</item>
     </style>
 
-    <style name="ThemeOverlay.AppCompat.MyPopuptheme" parent="Theme.AppCompat.Light" >
-        <item name="android:colorBackground">@color/white</item>
+    <style name="ThemeOverlay.AppCompat.MyPopuptheme" parent="Theme.AppCompat.DayNight" >
+        <item name="android:colorBackground">#FBC7B9</item>
         <item name="android:textColor">@color/black</item>
 
     </style>
