--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,44 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Dashboard">
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="your Email is here"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline11"
-        app:layout_constraintVertical_bias="0.472" />
+    android:background="@drawable/placeholder"
+    tools:context=".Dashboard"
+    tools:layout_editor_absoluteX="9dp"
+    tools:layout_editor_absoluteY="87dp">
 
     <ImageView
         android:id="@+id/imageView25"
-        android:layout_width="127dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="136dp"
+        android:layout_width="112dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="128dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintHorizontal_bias="0.419"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:srcCompat="@drawable/jumper" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="44dp"
         android:layout_height="51dp"
-        android:layout_marginTop="88dp"
-        app:backgroundTint="#6779DD"
+        android:layout_marginTop="60dp"
+        app:backgroundTint="#D32D88"
         app:cornerRadius="@dimen/browser_actions_context_menu_max_width"
         app:icon="@drawable/ic_baseline_camera_alt_24"
         app:iconGravity="textEnd"
         app:iconPadding="0dp"
         app:iconTint="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.44"
+        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="@+id/imageView25"
         app:layout_constraintTop_toTopOf="@+id/imageView25" />
 
@@ -49,15 +41,15 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save Changes"
+        android:text="Save"
         android:textColor="#FFFFFF"
-        android:visibility="gone"
+        app:backgroundTint="#D32D88"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.895"
+        app:layout_constraintHorizontal_bias="0.882"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="@+id/guideline11"
-        app:layout_constraintVertical_bias="0.026" />
+        app:layout_constraintVertical_bias="0.029" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
@@ -86,5 +78,38 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.02872777" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/background"
+        android:padding="10dp"
+        android:text="Full Name"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/fullname"
+        app:layout_constraintEnd_toStartOf="@+id/fullname"
+        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toBottomOf="@+id/imageView25"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/fullname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="84dp"
+        android:background="@drawable/background"
+        android:padding="10dp"
+        android:text="TextView"
+        android:textColor="#151515"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/imageView25" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
